Added role in login

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,7 +10,7 @@
     <label for="Email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="Email" [(ngModel)]="usersignup.Email">
 
-    <label for="role"><b>UserRole</b></label>
+    <label for="UserRole"><b>UserRole</b></label>
     <select name="Roles" id="UserRole" [(ngModel)]="usersignup.UserRole">
       <option value="Author">Author</option>
       <option value="Reader">Reader</option>
