--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -7,6 +7,9 @@
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="Password" [(ngModel)]="user.Password">
           
+            <label for="userRole"><b>UserRole</b></label>
+            <input type="text" placeholder="Enter UserRole" name="Password" [(ngModel)]="user.UserRole">
+          
           <div class="form-group">
             <a  (click)="onSubmit()" type="button" class="btn btn-primary">Login</a>
           </div>
