Added Reader validation

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -45,7 +45,7 @@
 <div *ngIf = "ShowFields" class="row pt-3">
 
     <label for="name"><b>Title</b></label>
-            <input type="text" placeholder="Enter Title" name="Title" [(ngModel)]="book.title">
+            <input type="text" name="title" placeholder="Enter Title" name="Title" [(ngModel)]="book.title">
          
             <label for="category"><b>Category</b></label>
             <input type="text" name="category" placeholder="Enter Category" [(ngModel)]="book.category">
