--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,9 +16,9 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/Payment">BuyBook</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/createbooks">Createbooks</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" routerLink="/getpayment">Invoice</a>
           </li>
