--- a/src/app/createbooks/createbooks.component.html
+++ b/src/app/createbooks/createbooks.component.html
@@ -29,7 +29,7 @@
             <input type="text" name="active" [(ngModel)]="book.active">
         
           <div class="form-group">
-            <a (click)='onSubmit()' href='Books'>Save </a> 
+            <a (click)='onSubmit()' href='Books' type="button" class="btn btn-primary">Save </a> 
             <!-- <button>Create</button> -->
           </div>
 
