--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,18 +13,18 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/Signup">Signup</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/Payment">BuyBook</a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/createbooks">Createbooks</a>
           </li> -->
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/getpayment">Invoice</a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/searchbooks">searchbooks</a>
-          </li>
+          </li> -->
       </ul>
     </div>
   </nav>
