--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/searchbooks" type="button" class="btn btn-primary">searchbooks</a>
 <div class="container">
     <h1>Book Payment</h1>
         <form #form="ngForm" (ngSubmit)="onSubmit()">
