--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/createbooks">Createbooks</a>
+<button routerLink="/createbooks" class="btn btn-primary">Createbooks</button>
 <div *ngIf = "Showgrid" class="row pt-3">
 <div class='table-responsive'>
     <table class="table table-striped-border">
